fixed margin on mobile

--- a/style.css
+++ b/style.css
@@ -223,7 +223,9 @@ li > a:hover::before {
   .mob-nav {
     width:50%;
   }
-
+  .portfolio_item {
+    margin:0;
+  }
   }
 
 
